--- a/package.json
+++ b/package.json
@@ -5,19 +5,29 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc && vite build",
     "build:prod": "npm run type-check && npm run test:run && vite build",
     "preview": "vite preview",
-    "verify-deployment": "node scripts/verify-deployment.js",
-    "type-check": "tsc --noEmit",
-    "lint": "tsc --noEmit",
     "test": "vitest",
-    "test:run": "vitest run"
+    "test:run": "vitest run",
+    "type-check": "vue-tsc --noEmit",
+    "lint": "vue-tsc --noEmit",
+    "verify-deployment": "npm run build:prod"
+  },
+  "dependencies": {
+    "vue": "^3.4.0",
+    "pinia": "^2.1.7"
   },
   "devDependencies": {
-    "jsdom": "^27.0.0",
-    "typescript": "~5.8.3",
-    "vite": "^7.1.7",
-    "vitest": "^3.2.4"
+    "@vitejs/plugin-vue": "^5.0.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vue-tsc": "^2.0.0",
+    "vitest": "^1.0.0",
+    "jsdom": "^23.0.0",
+    "@vitest/ui": "^1.0.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
