--- a/package.json
+++ b/package.json
@@ -15,19 +15,21 @@
     "verify-deployment": "npm run build:prod"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
+    "pinia": "^2.1.7",
     "vue": "^3.4.0",
-    "pinia": "^2.1.7"
+    "vue-chartjs": "^5.3.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.0",
-    "typescript": "^5.3.0",
-    "vite": "^5.0.0",
-    "vue-tsc": "^2.0.0",
-    "vitest": "^1.0.0",
-    "jsdom": "^23.0.0",
     "@vitest/ui": "^1.0.0",
     "autoprefixer": "^10.4.16",
+    "jsdom": "^23.0.0",
     "postcss": "^8.4.32",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0",
+    "vitest": "^1.0.0",
+    "vue-tsc": "^2.0.0"
   }
 }
